# mesos-rpm

./: .gitignore  .kitchen.yml  .ruby-gemset  Berksfile  Gemfile  Makefile  README.md  Vagrantfile  bkp_bootstrap  bootstrap.sh  build_distro.sh  configure.ac  mesos-build  mesos-build.sh  metadata.rb
make-support/: bootstrap-bspace.sh
project/: bootstrap-bspace.sh
rpms/mesos-glabs/: mesos-env.sh  mesos-glabs.spec  mesos-locald.sh  mesos-masterd.sh  mesos-slaved.sh  mesos.conf
spec/: mesos-glabs-snappy.spec  mesos-glabs.spec
src/: mesos-env.sh  mesos-local.conf  mesos-locald.sh  mesos-master.conf  mesos-masterd.sh  mesos-slave.conf  mesos-slaved.sh
templates/: apache-mesos.spec.in  bootstrap  configure.ac
vboxes/cos-el6.4-x86_64/: Vagrantfile
